...
    // final appDataTableTheme = Theme.of(context).extension<AppDataTableTheme>()!;
    final size = MediaQuery.of(context).size;

    final summaryCardCrossAxisCount = (size.width >= kScreenWidthLg ? 4 : 2);

    return PortalMasterLayout(
      key: const Key('dashboardScreen'),
      body: ListView(
        padding: const EdgeInsets.all(kDefaultPadding),
        children: [
          const SizedBox(height: 8),
          /* ListTile(
            leading: const Icon(Icons.search),
...
                        textColor: themeData.colorScheme.onPrimary,
                        iconColor: Colors.black12,
                        width: summaryCardWidth,
                      ),
                    ),
                    _HoverableTile(
                      key: const Key('dashboardLicensesTile'),
                      onTap: () =>
                          GoRouter.of(context).go(RouteUri.billing),
                      child: SummaryCard(
                        title: lang.menuBilling,
                        value: lang.menuBilling,
                        icon: Icons.credit_card_rounded,
...
                        textColor: themeData.colorScheme.onPrimary,
                        iconColor: Colors.black12,
                        width: summaryCardWidth,
                      ),
                    ),
                    _HoverableTile(
                      key: const Key('dashboardStatsTile'),
                      onTap: () => GoRouter.of(context).go(RouteUri.stats),
                      child: SummaryCard(
                        title: lang.todaySales,
                        value: 'Stats',
                        icon: Icons.ssid_chart_rounded,
                        backgroundColor: appColorScheme.success,
...
