...
          ),
        ),
      );
    }

    return PortalMasterLayout(
      key: const Key('statsScreen'),
      body: RefreshIndicator(
        onRefresh: () async {
          _fetchChart();
          await _chartFuture;
        },
        child: ListView(
...
