...
        purchaseConfirmed;
    final returnedStillProcessing = !_loading &&
        billingQueryParamsFromLocation()['success'] == 'true' &&
        !purchaseConfirmed;

    return _shell(
      key: const Key('billingScreen'),
      body: Padding(
        padding: const EdgeInsets.all(kDefaultPadding),
        child: Column(
          crossAxisAlignment: CrossAxisAlignment.stretch,
          children: [
            Text(
...
